--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Gabriel Ruttner",
+  "author": "Bobby Jenrow",
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
